--- a/prisoners-dillema-game/index.html
+++ b/prisoners-dillema-game/index.html
@@ -11,7 +11,7 @@
 <main>
 <div class="jail">
     <div class="prisoner1">
-        <img src="/images/prisoner1.jpeg" alt="prisoner1">
+        <img src="images/prisoner1.jpeg" alt="prisoner1">
     </div>
     <div class="game-divison">
         <h1>Prisoner's Dilemma Game</h1>
