--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="logo"> <> Toshan Kanwar</div>
           <div class="navbar-links" id="navbarLinks">
             <ul>
-           <li>   <a href="https://www.toshankanwar.in">HOME</a></li>
+           <li>   <a href="https://toshankanwar.github.io">HOME</a></li>
                
            <li> <a href="/about">ABOUT</a></li>
            <li> <a href="/projects">PROJECTS</a></li>
@@ -40,7 +40,7 @@
 
         <!-- Top Navigation Menu -->
         <div class="topnav">
-          <a href="/index.html" class="active"><> Toshan kanwar </a>
+          <a href="https://toshankanwar.github.io" class="active"><> Toshan kanwar </a>
           <!-- Navigation links (hidden by default) -->
           <div id="myLinks">
             <a href="/index.html">Home</a>
@@ -96,7 +96,7 @@
                     <h3>You Know me as <span id="element" class="text"></span></h3>
                   
                     <h3>if you are looking for my <a href="/">Resume</a></h3>
-                  <a href="https://www.toshankanwar.in/about/">  <button class="glow-on-hover"><span>ABOUT ME</span></button></a>
+                  <a href="https://toshankanwar.github.io/about/">  <button class="glow-on-hover"><span>ABOUT ME</span></button></a>
                     <div class="about-sci">
                            <a href="https://www.linkedin.com/in/toshan-kanwar-9991b82a9/"><i class='bx bxl-linkedin' ></i></a>
                            <a href="https://github.com/toshankanwar">  <i class='bx bxl-github'></i></a>
