--- a/skills/index.html
+++ b/skills/index.html
@@ -22,7 +22,7 @@
             <div class="logo"> <> Toshan Kanwar</div>
             <div class="navbar-links" id="navbarLinks">
               <ul>
-              <li>   <a href="https://www.toshankanwar.in">HOME</a></li>
+              <li>   <a href="https://toshankanwar.github.io/">HOME</a></li>
                  
               <li> <a href="/about">ABOUT</a></li>
               <li> <a href="/projects">PROJECTS</a></li>
@@ -39,7 +39,7 @@
   
           <!-- Top Navigation Menu -->
           <div class="topnav">
-            <a href="/index.html" class="active"><> Toshan kanwar </a>
+            <a href="https://toshankanwar.github.io/" class="active"><> Toshan kanwar </a>
             <!-- Navigation links (hidden by default) -->
             <div id="myLinks">
               <a href="/index.html">Home</a>
