--- a/projects/index.html
+++ b/projects/index.html
@@ -99,7 +99,7 @@
           <div class="source">
             <a href="https://www.toshankanwar.in/contact/" target="_blank"> <button>View Project</button>
             </button></a>
-            <a href="https://github.com/toshankanwar/toshankanwar.in/login-signup" target="_blank"> <button>Source Code</button>
+            <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/login-signup" target="_blank"> <button>Source Code</button>
             </button></a>
           </div>
            </div>
@@ -118,7 +118,7 @@
           <div class="source">
             <a href="http://text.toshankanwar.in/" target="_blank"> <button>View Project</button>
             </button></a>
-            <a href="https://github.com/toshankanwar/toshankanwar.in/text-analysis" target="_blank"> <button>Source Code</button>
+            <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/text-analysis" target="_blank"> <button>Source Code</button>
             </button></a>
           </div>
            </div>
@@ -136,7 +136,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://www.toshankanwar.in/animal-cards/" target="_blank"> <button>View Project</button>
+            <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/animal-cards" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/toshankanwar.in/animal-cards" target="_blank"> <button>Source Code</button>
             </button></a>
