--- a/projects/index.html
+++ b/projects/index.html
@@ -136,9 +136,9 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/animal-cards" target="_blank"> <button>View Project</button>
+            <a href="https://www.toshankanwar.in/animal-cards/" target="_blank"> <button>View Project</button>
             </button></a>
-            <a href="https://github.com/toshankanwar/toshankanwar.in/animal-cards" target="_blank"> <button>Source Code</button>
+            <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/animal-cards" target="_blank"> <button>Source Code</button>
             </button></a>
           </div>
            </div>
