--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
     
 </body>
 <footer>
-    <div class="design"><strong>Design and Developed by</strong><span> Toshan Kanwar</span></div>
+    <div class="design"><strong>Design and Developed by</strong><span> Toshan Kanwar</span><!-- Start of CuterCounter Code -->
+<a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hxpcpnf&nd=6&style=52" border="0" alt="best free website hit counter"></a>
+<!-- End of CuterCounter Code --></div>
     <div class="power">All Rights Reserved 2024</div>
 </footer>
 <style>
