--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
             <div class="logo"> <> Toshan Kanwar</div>
             <div class="navbar-links" id="navbarLinks">
               <ul>
-  <li>   <a href="https://toshankanwar.github.io/">HOME</a></li>
+  <li>   <a href="/index.html">HOME</a></li>
                  
                
                 <li> <a href="/about">ABOUT</a></li>
@@ -41,10 +41,10 @@
   
           <!-- Top Navigation Menu -->
           <div class="topnav">
-            <a href="https://toshankanwar.github.io/" class="active"><> Toshan kanwar </a>
+            <a href="/index.html" class="active"><> Toshan kanwar </a>
             <!-- Navigation links (hidden by default) -->
             <div id="myLinks">
-              <a href="https://toshankanwar.github.io/">Home</a>
+              <a href="/index.html">Home</a>
               <a href="/about">About</a>
               <a href="/projects">Project</a>
               <a href="/skills">Skills</a>
