--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
             <div class="logo"> <> Toshan Kanwar</div>
             <div class="navbar-links" id="navbarLinks">
               <ul>
-               <li>   <a href="https://toshankanwar.in">HOME</a></li>
+               <li>   <a href="index.html">HOME</a></li>
                  
                
                <li> <a href="/about">ABOUT</a></li>
