--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
             <div class="logo"> <> Toshan Kanwar</div>
             <div class="navbar-links" id="navbarLinks">
               <ul>
-             <li>   <a href="https://www.toshankanwar.in">HOME</a></li>
+             <li>   <a href="/index.html">HOME</a></li>
                  
                
              <li> <a href="/about">ABOUT</a></li>
