--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                     <h3>You Know me as <span id="element" class="text"></span></h3>
                   
                     <h3>if you are looking for my <a href="/">Resume</a></h3>
-                  <a href="https://www.toshankanwar.in/about/">  <button class="glow-on-hover"><span>ABOUT ME</span></button></a>
+                  <a href="/about">  <button class="glow-on-hover"><span>ABOUT ME</span></button></a>
                     <div class="about-sci">
                            <a href="https://www.linkedin.com/in/toshankanwar2005/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                           <a href="https://github.com/toshankanwar/" target="_blank">  <i class='bx bxl-github'></i></a>
+                           <a href="https://github.com/UncountedBug" target="_blank">  <i class='bx bxl-github'></i></a>
                            <a href="https://www.youtube.com/@heartlofi06" target="_blank"> <i class='bx bxl-youtube'></i></a>
                       
                               <a href="https://www.instagram.com/toshankanwar.in/" target="_blank"><i class='bx bxl-instagram' ></i></a>
