--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
             <div class="logo"> <> Toshan Kanwar</div>
             <div class="navbar-links" id="navbarLinks">
               <ul>
-  <li>   <a href="/index.html">HOME</a></li>
+  <li>   <a href="index.html">HOME</a></li>
                  
                
                 <li> <a href="/about">ABOUT</a></li>
@@ -41,7 +41,7 @@
   
           <!-- Top Navigation Menu -->
           <div class="topnav">
-            <a href="/index.html" class="active"><> Toshan kanwar </a>
+            <a href="index.html" class="active"><> Toshan kanwar </a>
             <!-- Navigation links (hidden by default) -->
             <div id="myLinks">
               <a href="/index.html">Home</a>
