--- a/projects/index.html
+++ b/projects/index.html
@@ -42,7 +42,7 @@
   
           <!-- Top Navigation Menu -->
           <div class="topnav">
-            <a href="/index.html" class="active"><> Toshan kanwar </a>
+            <a href="index.html" class="active"><> Toshan kanwar </a>
             <!-- Navigation links (hidden by default) -->
             <div id="myLinks">
               <a href="index.html">Home</a>
