--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <a href="/about">  <button class="glow-on-hover"><span>ABOUT ME</span></button></a>
                     <div class="about-sci">
                            <a href="https://www.linkedin.com/in/toshankanwar2005/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                           <a href="https://github.com/UncountedBug" target="_blank">  <i class='bx bxl-github'></i></a>
+                           <a href="https://github.com/toshankanwar" target="_blank">  <i class='bx bxl-github'></i></a>
                            <a href="https://www.youtube.com/@heartlofi06" target="_blank"> <i class='bx bxl-youtube'></i></a>
                       
                               <a href="https://www.instagram.com/toshankanwar.in/" target="_blank"><i class='bx bxl-instagram' ></i></a>
