--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="/index.html" class="active"><> Toshan kanwar </a>
           <!-- Navigation links (hidden by default) -->
           <div id="myLinks">
-            <a href="/index.html">Home</a>
+            <a href="/index.html">HOME</a>
             <a href="/about">About</a>
             <a href="/projects">Project</a>
             <a href="/skills">Skills</a>
