--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
                     <h3>I'm passionate Full Stack web developer having an experience of web applications with React.js, Next.js , Node.js, Express.js and MongoDb.</h3>
                     <h3>You Know me as <span id="element" class="text"></span></h3>
                   
-                    <h3>if you are looking for my <a href="/">Resume</a></h3>
+                    <h3>if you are looking for my <a href="https://drive.google.com/file/d/1pxqJyG1vjk2aijkgQfZm2O6r76PmUEYa/view?usp=drive_link">Resume</a></h3>
                   <a href="/about">  <button class="glow-on-hover"><span>ABOUT ME</span></button></a>
                     <div class="about-sci">
                            <a href="https://www.linkedin.com/in/toshankanwar2005/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                            <a href="https://github.com/toshankanwar" target="_blank">  <i class='bx bxl-github'></i></a>
+                           <a href="https://leetcode.com/u/UncountedBug/" target="_blank">  <i class='bx bx-code-alt'></i></a>
                            <a href="https://www.youtube.com/@heartlofi06" target="_blank"> <i class='bx bxl-youtube'></i></a>
                       
                               <a href="https://www.instagram.com/toshankanwar.in/" target="_blank"><i class='bx bxl-instagram' ></i></a>
