--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                            <a href="https://www.linkedin.com/in/toshankanwar2005/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                            <a href="https://github.com/toshankanwar" target="_blank">  <i class='bx bxl-github'></i></a>
                            <a href="https://leetcode.com/u/UncountedBug/" target="_blank">  <i class='bx bx-code-alt'></i></a>
-                           <a href="https://www.youtube.com/@heartlofi06" target="_blank"> <i class='bx bxl-youtube'></i></a>
+                           <a href="https://www.youtube.com/@Toshan2005" target="_blank"> <i class='bx bxl-youtube'></i></a>
                       
                               <a href="https://www.instagram.com/toshankanwar.in/" target="_blank"><i class='bx bxl-instagram' ></i></a>
                          <a href="https://www.facebook.com/toshan.kanwar.73" target="_blank"><i class='bx bxl-facebook'></i></a>
