--- a/projects/index.html
+++ b/projects/index.html
@@ -78,7 +78,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://bakery.toshankanwar.in/" target="_blank"> <button>View Project</button>
+            <a href="https://bakery-toshan.vercel.app/" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/Bakery-Management-System" target="_blank"> <button>Source Code</button>
             </button></a>
@@ -116,7 +116,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="http://text.toshankanwar.in/" target="_blank"> <button>View Project</button>
+            <a href="https://text-analyzer-toshan.vercel.app/" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/text-analysis" target="_blank"> <button>Source Code</button>
             </button></a>
