--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="/index.html">HOME</a>
             <a href="/about">About</a>
             <a href="/projects">Project</a>
-            <a href="/skills">Skills</a>
+            <a href="/skills">Skill</a>
           
            
 
