--- a/projects/index.html
+++ b/projects/index.html
@@ -136,7 +136,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://www.toshankanwar.in/animal-cards/" target="_blank"> <button>View Project</button>
+            <a href="https://animal-cards-toshan.vercel.app" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/animal-cards" target="_blank"> <button>Source Code</button>
             </button></a>
