--- a/projects/index.html
+++ b/projects/index.html
@@ -118,7 +118,7 @@
           <div class="source">
             <a href="https://text-analyzer-toshan.vercel.app/" target="_blank"> <button>View Project</button>
             </button></a>
-            <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/text-analysis" target="_blank"> <button>Source Code</button>
+            <a href="https://github.com/toshankanwar/text-analyzer" target="_blank"> <button>Source Code</button>
             </button></a>
           </div>
            </div>
