--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,8 @@
     <div class="mainbg">
       <h2 class="reach">Contact Me</h2>
       <div class="visitor">
-        <form id="contactForm">
+        <form id="contactForm" action="https://api.web3forms.com/submit" method="post">
+          <input type="hidden" name="access_key" value="b8a13edd-5d10-492a-992f-40dc5acd7849">
           <div class="dpc">
             <div class="detail">
               <div class="input-group">
