--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1858669555193675" crossorigin="anonymous"></script>
-   
+    <style>
+      .popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: #fff;
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+        text-align: center;
+        z-index: 1000;
+      }
+      .popup button {
+        margin-top: 10px;
+        padding: 5px 10px;
+        border: none;
+        background: #007bff;
+        color: white;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -33,7 +55,7 @@
     <div class="mainbg">
       <h2 class="reach">Contact Me</h2>
       <div class="visitor">
-        <form id="contactForm" action="https://api.web3forms.com/submit" method="post">
+        <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
           <input type="hidden" name="access_key" value="b8a13edd-5d10-492a-992f-40dc5acd7849">
           <div class="dpc">
             <div class="detail">
@@ -68,9 +90,18 @@
     
     <script>
       document.getElementById("contactForm").addEventListener("submit", function(event) {
-        event.preventDefault(); // Prevent form submission
-        document.getElementById("popup").style.display = "block";
-        document.getElementById("contactForm").reset(); // Reset form fields
+        event.preventDefault(); // Prevent default form submission
+        let formData = new FormData(this);
+        fetch(this.action, {
+          method: "POST",
+          body: formData
+        }).then(response => response.json())
+          .then(result => {
+            if (result.success) {
+              document.getElementById("popup").style.display = "block";
+              document.getElementById("contactForm").reset();
+            }
+          }).catch(error => console.error("Error:", error));
       });
       
       function closePopup() {
