--- a/projects/index.html
+++ b/projects/index.html
@@ -78,7 +78,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://bakery-toshan.vercel.app/" target="_blank"> <button>View Project</button>
+            <a href="https://bakery.toshankanwar.website/" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/Bakery-Management-System" target="_blank"> <button>Source Code</button>
             </button></a>
@@ -97,7 +97,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://toshankanwar.in/contact/" target="_blank"> <button>View Project</button>
+            <a href="https://toshankanwar.website/contact" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/login-signup" target="_blank"> <button>Source Code</button>
             </button></a>
@@ -116,7 +116,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://text-analyzer-toshan.vercel.app/" target="_blank"> <button>View Project</button>
+            <a href="https://text.toshankanwar.website/" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/text-analyzer" target="_blank"> <button>Source Code</button>
             </button></a>
@@ -136,7 +136,7 @@
               </ul>
             </div>
           <div class="source">
-            <a href="https://animal-cards-toshan.vercel.app" target="_blank"> <button>View Project</button>
+            <a href="https://animal.toshankanwar.website/" target="_blank"> <button>View Project</button>
             </button></a>
             <a href="https://github.com/toshankanwar/toshankanwar.in/tree/main/animal-cards" target="_blank"> <button>Source Code</button>
             </button></a>
