--- a/contact/index.html
+++ b/contact/index.html
@@ -108,6 +108,7 @@
         document.getElementById("popup").style.display = "none";
       }
     </script>
+    <script defer src="js/script.js"></script>
   </body>
   <footer>
     <div class="design"><strong>Design and Developed by</strong><span> Toshan Kanwar</span></div>
